--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ simpleFactory.shapeType=circle
 factoryMethod.className=com.mightybird.designpattern.creational.factorymethod.factories.PNGReaderFactory
 abstractFactory.className=com.mightybird.designpattern.creational.abstractfactory.factories.AndroidControllerFactory
 builder.builderClassName=com.mightybird.designpattern.creational.builder.LegacyModeBuilder
+adapter.adapterClassName=com.mightybird.designpattern.structural.adapter.Adapter
