finish decorator pattern

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ factoryMethod.className=com.mightybird.designpattern.creational.factorymethod.fa
 abstractFactory.className=com.mightybird.designpattern.creational.abstractfactory.factories.AndroidControllerFactory
 builder.builderClassName=com.mightybird.designpattern.creational.builder.LegacyModeBuilder
 adapter.adapterClassName=com.mightybird.designpattern.structural.adapter.Adapter
+bridge.converterClassName=com.mightybird.designpattern.structural.bridge.XMLConverter
+bridge.readerClassName=com.mightybird.designpattern.structural.bridge.MySQLReader
